# test_simulation

./: .gitignore  .gitmodules  Axis.cpp  Bias.cpp  Bias.h  CMakeLists.txt  Common.cpp  Common.h  Grid.cpp  Grid.h  MetaDynamics.cpp  MetaDynamics.h  Potential.cpp  Potential.h  README.md  Simulation.cpp  Simulation.h  Tools.cpp  Tools.h  cv.h  main.cpp  plot_energy.py  simulation.cpp
data/: path_new2.txt  path_new3.txt
energy_histogram/: hist.cpp  plot_dV_dist.py
scripts/: .gitignore  axis.json  bin_traj.py  draw_fes_2D_2.py
src/: AtomGroup.h  Axis.h  Bias.cpp  Bias.h  Box.h  Common.cpp  Common.h  Grid.cpp  Grid.h  Histogram.cpp  Histogram.h  Metadynamics.cpp  Metadynamics.h  PCV.cpp  PCV.h  Potential.cpp  Potential.h  Potential_LJ.h  Potential_cosine.h  Potential_flatwells.h  Simulation.cpp  Simulation.h  TestBiased1.cpp  TestBiased1BD.cpp  TestBiased2.cpp  TestBiased3.cpp  TestHaohao.cpp  TestPCVBiased1.cpp  TestPCVBiased1NoZ.cpp  TestPCVBiased2.cpp  TestPCVBiased2NoZ.cpp  TestPCVBiased3.cpp  TestPCVBiased3NoZ.cpp  TestPCVBiasedMB.cpp  TestPCVBiasedMBUnphysical.cpp  TestPCVNumericalGradients.cpp  TestPotential.cpp  TestTripleWellAlpha10.cpp  TestUnbiased1.cpp  TestUnbiased1BD.cpp  (+5 more)
